# xfind

./: .gitignore  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: python-app.yml  rust.yml
bash/bashfind/lib/: bashfindlib.bash  color.sh  consolecolor.sh
bash/bashfind/test/: bashfindtests.bash  test_common.bash  test_file_types.bash  test_file_util.bash  test_finder.bash  test_settings.bash
c/cfind/: .gitignore  CMakeLists.txt  Makefile  cfind.c
c/cfind/include/: argtokenizer.h  argtokennode.h  cfind.h  color.h  common.h  config.h  consolecolor.h  fileresults.h  filetype.h  filetypemap.h  filetypes.h  fileutil.h  finder.h  finderr.h  findoptions.h  findsettings.h  intnode.h  options.h  pathnode.h  regexnode.h  sortby.h  stringarray.h  stringnode.h
c/cfind/src/: argtokenizer.c  argtokennode.c  cfind.c  color.c  common.c  config.c  fileresults.c  filetypemap.c  filetypes.c  fileutil.c  finder.c  finderr.c  findoptions.c  findsettings.c  intnode.c  options.c  pathnode.c  regexnode.c  sortby.c  stringarray.c  stringnode.c
c/cfind/test/: test_cfind.c  test_common.c  test_common.h  test_filetypes.c  test_filetypes.h  test_fileutil.c  test_fileutil.h  test_finder.c  test_finder.h  test_findoptions.c  test_findoptions.h  test_findsettings.c  test_findsettings.h
clojure/cljfind/: .gitignore  README.md  project.clj
clojure/cljfind/doc/: intro.md
clojure/cljfind/resources/: filetypes.json
cpp/cppfind/: CMakeLists.txt  README.md  cppfind.cpp  cppfind.sh  cppfindConfig.cmake
cpp/cppfind/include/: ArgToken.h  ArgTokenizer.h  FileResult.h  FileResultFormatter.h  FileResultSorter.h  FileTypes.h  FileUtil.h  FindConfig.h  FindException.h  FindFile.h  FindOption.h  FindOptions.h  FindPattern.h  FindSettings.h  Finder.h  Option.h  RegexPattern.h  StringUtil.h  color.h  common.h  config.h  consolecolor.h  cppfind.h
cpp/cppfind/src/: ArgToken.cpp  ArgTokenizer.cpp  FileResult.cpp  FileResultFormatter.cpp  FileResultSorter.cpp  FileTypes.cpp  FileUtil.cpp  FindConfig.cpp  FindException.cpp  FindFile.cpp  FindOption.cpp  FindOptions.cpp  FindPattern.cpp  FindSettings.cpp  Finder.cpp  RegexPattern.cpp  StringUtil.cpp  common.cpp  config.cpp  consolecolor.cpp
cpp/cppfind/tests/: FileResultTest.cpp  FileTypesTest.cpp  FileUtilTest.cpp  FindFileTest.cpp  FindOptionsTest.cpp  FindSettingsTest.cpp  FinderTest.cpp  tests-main.cpp
csharp/CsFind/: .gitignore  CsFind.sln  TODO.md  csfind.bat  csfind.sh
csharp/CsFind/CsFind/: Common.cs  CsFind.csproj  EmbeddedResource.cs  FileTypes.cs  FileUtil.cs  FindException.cs  FindFile.cs  FindMain.cs  FindOptions.cs  FindSettings.cs  Finder.cs  Program.cs
csharp/CsFind/CsFindGen/: CsFindGen.csproj  FileTypesGenerator.cs  OptionsGenerator.cs  nuget.config
csharp/CsFind/CsFindLib/: ArgToken.cs  ArgTokenType.cs  ArgTokenizer.cs  Color.cs  Common.cs  ConsoleColor.cs  CsFindLib.csproj  EmbeddedResource.cs  FilePath.cs  FileResult.cs  FileResultFormatter.cs  FileResultSorter.cs  FileTypes.cs  FileUtil.cs  FindConfig.cs  FindError.cs  FindException.cs  FindFile.cs  FindOption.cs  FindOptions.cs  FindSettings.cs  Finder.cs  Logger.cs  SortBy.cs
csharp/CsFind/CsFindTests/: CFindTests.csproj  CsFindTests.csproj  EmbeddedTestResource.cs  FilePathTests.cs  FileResultTests.cs  (+6 more)
dart/dartfind/: .gitignore  CHANGELOG.md  README.md  analysis_options.yaml  pubspec.yaml
elixir/exfind/: .gitignore  README.md  mix.exs
fsharp/FsFind/: .gitignore  FsFind.sln  fsfind.bat  fsfind.sh
go/gofind/: go.mod  go.sum
groovy/groovyfind/: .gitignore  build.gradle  settings.gradle
haskell/hsfind/: .gitignore  ChangeLog.md  README.md  hsfind.bat  hsfind.cabal  hsfind.cabal.rm  package.yaml  stack.yaml
java/javafind/: .gitignore  .project  build.gradle.kts  google_checks.xml  pom.xml  settings.gradle.kts  sun_checks.xml
javascript/jsfind/: .eslintrc.js  .gitignore  babel.config.json  package-lock.json  package.json
kotlin/ktfind/: .gitignore  build.gradle  build.gradle.kts  settings.gradle  settings.gradle.kts
objc/objcfind/: Package.swift  README.md  objcfind.sh
ocaml/mlfind/: build.sh
perl/plfind/: .gitignore  MANIFEST  META.json  Makefile.PL  README  cpanfile
php/phpfind/: .gitignore  README.md  composer.json
powershell/ps1find/: Ps1FindModule.psm1  ps1find.ps1  ps1find.tests.ps1
python/pyfind/: .gitignore  pyproject.toml  requirements.txt  setup.py
python/pyfind/data/: findoptions.json
python/pyfind/pyfind/: __init__.py  __main__.py  argtokenizer.py  color.py  common.py  config.py  consolecolor.py  constants.py  fileresult.py  filetypes.py  fileutil.py  finder.py  findexception.py  findfile.py  findoption.py  findoptions.py  findpath.py  findsettings.py  option.py  sortby.py
python/pyfind/tests/: fileresult_test.py  filetypes_test.py  fileutil_test.py  finder_test.py  findfile_test.py  findoptions_test.py  findsettings_test.py
ruby/rbfind/: .gitignore  Gemfile  README.md  rbfind.gemspec
rust/rsfind/: .gitignore  Cargo.toml  rsfind.sh
scala/scalafind/: .gitignore  build.sbt
scripts/: .gitignore  argmap_scenarios.json  benchmark.py  benchmarker.py  build.ps1  build.sh  build_functions.ps1  build_functions.sh  clean.ps1  clean.sh  clean_functions.ps1  clean_functions.sh  colorize_scenarios.json  common.sh  compare.py  config.ps1  config.sh  default_files_scenarios.json  docker_setup.sh  filter_dirs_scenarios.json  followsymlinks_scenarios.json  lint.ps1  lint.sh  lint_functions.sh  pyvenv_setup.sh  scenarios.json  settingsfile_scenarios.json  sort_scenarios.json  stats.sh  test.sh  tildepath_scenarios.json  unittest.ps1  unittest.sh  unittest_functions.ps1  unittest_functions.sh  update.ps1  update.sh  update_functions.sh  validation_scenarios.json  xfind.py  (+2 more)
shared/: filetypes.json  findoptions.json  findoptions.xml  settings.json  xfind.db  xfind.sql
shared/testFiles/: helloworld_latin1.txt  helloworld_shiftjis.txt
swift/swiftfind/: Package.swift  README.md  swiftfind.sh
typescript/tsfind/: .gitignore  eslint.config.mjs  eslint.config.mts  package-lock.json  package.json  tsconfig.json
(+645 files in other folders)
