[build-system]
requires = ["setuptools>=80.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfind"
version = "0.1.0"
dependencies = [
    "python-dateutil>=2.9.0",
    "termcolor>=3.3.0",
    "wheel>=0.46.1",
]
requires-python = ">= 3.11"
authors = [
    { name = "Cary Clark", email = "clarkcb@gmail.com"}
]
license = "MIT"
